# owui-openrouter

./: .gitignore  README.md  owui-openrouter.py  owui_openrouter.py  pyproject.toml  requirements.txt
documentation/: openrouter-model-api.md  openwebui-action-function.md  openwebui-filter-function.md  openwebui-pipe-function.md
tests/: get_openrouter_models.py  models.json  test_openrouter_models.py
